Added ClothingTypeListView, ClothingTypeCreateView, ClothingTypeUpdateView, ClothingTypeDeleteView

--- a/templates/catalog/index.html
+++ b/templates/catalog/index.html
@@ -4,13 +4,13 @@
 {% endblock %}
 
 {% block content %}
-  <h1>Craft Home</h1>
-  <p> Welcome to Fashion Craft </p>
+  <h1>Workshop Home</h1>
+  <p> Welcome to Fashion workshop </p>
   <h3>Craft content</h3>
   <ul>
     <li>Number of clothes: {{ num_clothes }}</li>
-    <li>Number of designer: {{ num_designers }}</li>
-    <li>Number of clothing type: {{ num_clothing_types }}</li>
+    <li>Number of designers: {{ num_designers }}</li>
+    <li>Number of clothing types: {{ num_clothing_types }}</li>
   </ul>
   <p>You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}</p>
 {% endblock %}
