MaterialListView, MaterialCreateView, MaterialUpdateView, MaterialDeleteView

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -12,4 +12,5 @@
 {#  <li class="list-group-item"><a href="{% url 'taxi:driver-list' %}">All drivers</a></li>#}
 {#  <li class="list-group-item"><a href="{% url 'taxi:car-list' %}">All cars</a></li>#}
   <li class="list-group-item"><a href="{% url 'catalog:clothing-type-list' %}">All clothing types</a></li>
+  <li class="list-group-item"><a href="{% url 'catalog:material-list' %}">All materials</a></li>
 </ul>
