Added SizeCreateView, SizeUpdateView, SizeDeleteView, SizeListView

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -13,4 +13,5 @@
 {#  <li class="list-group-item"><a href="{% url 'taxi:car-list' %}">All cars</a></li>#}
   <li class="list-group-item"><a href="{% url 'catalog:clothing-type-list' %}">All clothing types</a></li>
   <li class="list-group-item"><a href="{% url 'catalog:material-list' %}">All materials</a></li>
+  <li class="list-group-item"><a href="{% url 'catalog:size-list' %}">All sizes</a></li>
 </ul>
