--- a/templates/catalog/clothingtype_form.html
+++ b/templates/catalog/clothingtype_form.html
@@ -1,12 +1,5 @@
 {% extends "base.html" %}
-{% load crispy_forms_filters %}
-
 {% block content %}
   <h1>{{ object|yesno:"Update,Create" }} clothing type</h1>
-  <form action="" method="post" novalidate>
-    {% csrf_token %}
-    {{ form|crispy }}
-
-    <input type="submit" value="Submit" class="btn btn-primary">
-  </form>
+  {% include "includes/create_or_update_form.html" %}
 {% endblock %}
