--- a/templates/catalog/material_confirm_delete.html
+++ b/templates/catalog/material_confirm_delete.html
@@ -9,6 +9,6 @@
   <form action="" method="post">
   {% csrf_token  %}
   <input class="btn btn-danger" type="submit" value="Yes, delete">
-   <a href="{% url 'catalog:clothing-type-list' %}" class="btn btn-secondary">Cancel</a>
+   <a href="{% url 'catalog:material-list' %}" class="btn btn-secondary">Cancel</a>
   </form>
 {% endblock %}
