Added DesignerListView, DesignerDetailView, DesignerCreateView, DesignerUpdateView, DesignerDeleteView

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -9,7 +9,7 @@
   <br>
 
   <li class="list-group-item"><a href="{% url 'catalog:index' %}">Home</a></li>
-{#  <li class="list-group-item"><a href="{% url 'taxi:driver-list' %}">All drivers</a></li>#}
+  <li class="list-group-item"><a href="{% url 'catalog:designer-list' %}">All designers</a></li>
 {#  <li class="list-group-item"><a href="{% url 'taxi:car-list' %}">All cars</a></li>#}
   <li class="list-group-item"><a href="{% url 'catalog:clothing-type-list' %}">All clothing types</a></li>
   <li class="list-group-item"><a href="{% url 'catalog:material-list' %}">All materials</a></li>
