Added ClothingListView, ClothingDetailView, ClothingCreateView, ClothingUpdateView, ClothingDeleteView

--- a/templates/catalog/designer_list.html
+++ b/templates/catalog/designer_list.html
@@ -25,7 +25,7 @@
         <td><a href="{{ designer.get_absolute_url }}">{{ designer.username }} {% if user == designer %} (Me){% endif %}</a></td>
         <td>{{ designer.first_name }}</td>
         <td>{{ designer.last_name }}</td>
-        <td>{{ designer.license_number }}</td>
+        <td>{{ designer.pseudonym }}</td>
       </tr>
     {% endfor %}
 
