--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -10,7 +10,7 @@
 
   <li class="list-group-item"><a href="{% url 'catalog:index' %}">Home</a></li>
   <li class="list-group-item"><a href="{% url 'catalog:designer-list' %}">All designers</a></li>
-{#  <li class="list-group-item"><a href="{% url 'taxi:car-list' %}">All cars</a></li>#}
+  <li class="list-group-item"><a href="{% url 'catalog:clothing-list' %}">All Clothes</a></li>
   <li class="list-group-item"><a href="{% url 'catalog:clothing-type-list' %}">All clothing types</a></li>
   <li class="list-group-item"><a href="{% url 'catalog:material-list' %}">All materials</a></li>
   <li class="list-group-item"><a href="{% url 'catalog:size-list' %}">All sizes</a></li>
