--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,10 +1,11 @@
 <ul class="sidebar-nav list-group">
-{#  {% if user.is_authenticated %}#}
-{#    <li class="list-group-item">User: <a href="{{ user.get_absolute_url }}">{{ user.get_username }}</a></li>#}
-{#    <li class="list-group-item"><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>#}
-{#  {% else %}#}
-{#    <li class="list-group-item"><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>#}
-{#  {% endif %}#}
+  {% if user.is_authenticated %}
+    <li class="list-group-item">User: <a href="{{ user.get_absolute_url }}">{{ user.get_username }}</a></li>
+    <li class="list-group-item"><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+  {% else %}
+    <li class="list-group-item"><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+    <li class="list-group-item"><a href="{% url 'register' %}">Register</a></li>
+  {% endif %}
 
   <br>
 
