removed unnecessary picture & changed background image

--- a/templates/catalog/clothingtype_list.html
+++ b/templates/catalog/clothingtype_list.html
@@ -5,7 +5,7 @@
 {% block body_class %} clothing-type-page {% endblock body_class %}
 {% block content %}
   <header class="header-2">
-    <div class="page-header section-height-75 relative" style="background-image: url('{{ ASSETS_ROOT }}/img/curved-images/curved.jpg')">
+    <div class="page-header section-height-75 relative" style="background-image: url('{{ ASSETS_ROOT }}/img/curved-images/bg2.jpg')">
       <div class="container">
         <div class="row">
           <div class="col-lg-7 text-center mx-auto">
