--- a/templates/catalog/clothing_list.html
+++ b/templates/catalog/clothing_list.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <header class="header-2">
-    <div class="page-header section-height-50 relative" style="background-image: url('{{ ASSETS_ROOT }}/img/curved-images/curved.jpg')">
+    <div class="page-header section-height-50 relative" style="background-image: url('{{ ASSETS_ROOT }}/img/curved-images/bg2.jpg')">
       <div class="container">
         <div class="row">
           <div class="col-lg-7 text-center mx-auto">
