--- a/templates/catalog/designer_form.html
+++ b/templates/catalog/designer_form.html
@@ -7,7 +7,7 @@
 {% block content %}
 
    <section>
-  <div class="page-header  relative" style="background-image: url('{{ ASSETS_ROOT }}/img/curved-images/curved.jpg')">
+  <div class="page-header  relative" style="background-image: url('{{ ASSETS_ROOT }}/img/curved-images/bg2.jpg')">
   <div class="container py-4">
     <div class="row">
       <div class="col-lg-7 mx-auto d-flex justify-content-center flex-column">
